--- a/public/components/ig-tats-hr/ig-tats-hr.scss
+++ b/public/components/ig-tats-hr/ig-tats-hr.scss
@@ -1,11 +1,17 @@
 .ig-tats-hr {
+    display: inline-block;
+    width: 100%;
+    margin: 0 0 0 -15px;
+
     .start-hr {
         background-color: #EFB70A;
         height: 3px;
+        padding: 0;
     }
 
     .end-hr {
         background-color: #dadada;
         height: 2px;
+        padding: 0;
     }
 }
